--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "@heroicons/react": "^2.2.0",
     "autoprefixer": "^10.4.21",
     "framer-motion": "^12.5.0",
+    "leaflet": "^1.9.4",
     "next": "15.2.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
